--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Qinty</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="css/estilos.css" rel="stylesheet"></head>
+<link href="style.css" rel="stylesheet"></head>
 <body>
-<script type="text/javascript" src="js/app.js"></script></body>
+   <div>?</div>
+<script type="text/javascript" src="app.js"></script></body>
 </html>
